# ros-interfaces

./: README.md  daadas
.devcontainer/: devcontainer.json
interfaces/: CMakeLists.txt  package.xml
polibax_interfaces/: CMakeLists.txt  package.xml
polibax_interfaces/action/: Dummy.action  Explore.action  FindTarget.action  MissionOrder.action  MoveTo.action  Takeoff.action
polibax_interfaces/msg/: AgentStatus.msg  ArucoImage.msg  ArucoRegistry.msg  DetectedObject.msg  Entities.msg  Entity.msg  EntityList.msg  MissionTask.msg  MissionTaskList.msg  MotorControlStatus.msg  ObjectRegistry.msg  RoverStatus.msg  Vec2.msg
polibax_interfaces/srv/: AddMissionTask.srv  AskArucoPosition.srv  DoublePid.srv  GetAllMissionTask.srv  GetContext.srv  GetCookie.srv  GetMissionTask.srv  MoveTo.srv  SetMissionComplete.srv  StringTrigger.srv  Takeoff.srv
